<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_water"
    android:layout_weight="3"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/guide"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="50dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGreen" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/crystal_green" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:textAllCaps="true"
                android:textColor="@color/colorMediumGreen"
                android:text="@string/green_crystal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/colorMediumGreen"
                android:gravity="center"
                android:text="@string/green_crystal_text" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGreenLight" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/red_grey" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:textSize="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:text="@string/lovely_heart"
                android:textAllCaps="true"
                android:id="@+id/textView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorRed"
                android:text="@string/heart_text" />
        </LinearLayout>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGreen" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/skull_yellow" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/colorYellow"
                android:textAllCaps="true"
                android:gravity="center"
                android:text="@string/be_rich_or_dead" />

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/colorYellow"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="@string/rich_text" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <View

        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGreen" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <TextView
        android:id="@+id/start_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/start_game"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="50dp" />
</LinearLayout>
